2007-05-01 Thiago M. Sayão <thiago.sayao@gmail.com> 
	* new Logo
	* Fix autotools

2007-04-06  Thiago M. Sayão <thiago.sayao@gmail.com> 
	* msnp-sharp/DisplayImage.cs: don't close the DataStream on RetieveImage ()

2007-04-04  Thiago M. Sayão <thiago.sayao@gmail.com> 
	* Fix display image transfer
	* Code cleanup	
	
2007-03-26  Thiago M. Sayão <thiago.sayao@gmail.com> 

	* msnp-sharp/PersistentStream.cs: Removed
	* msnp-sharp/NS11MessageHandler.cs: Fix bug when removing contacts
	* msnp-sharp/EventArgs.cs, msnp-sharp/SB11MessageHandler.cs,
	  msnp-sharp/Wink.cs: Add Winks support
	* msnp-sharp/MSNSLPHandler.cs, msnp-sharp/MSNObject.cs: Add Winks
	  support, cleanup
	* msnp-sharp/DisplayImage.cs: Remove PersistentStream

2007-03-16  Thiago M. Sayão <thiago.sayao@gmail.com> 

	* msnp-sharp/NS11MessageHandler.cs: Fix AuthenticationException
	* msnp-sharp/SocketMessageProcessor.cs: Reduce the timeout, it was too
	  much

2007-03-05 Thiago M. Sayão <thiago.sayao@gmail.com>
	* Rename the project to MSNPSharp as requested by the original author
	(Bas Geertsema)

2007-02-27 Thiago M. Sayão <thiago.sayao@gmail.com>
	* Fix file transfers
	* Changed the API, added the AcceptTransfer and RejectTransfer instead
	or using the argument variable Accept to true and false (solve thread
	problems between the UI and DotMSN)
